# app-libs

./: .gitignore  CMakeLists.txt
agent/: CMakeLists.txt  agent.cpp  agent.h  agentcontroller.cpp  agentcontroller.h  client.cpp  client.h  logging.cpp  logging.h  structures.cpp  structures.h
appcomponents/: ButtonsFlow.qml  CMakeLists.txt  CelebrationOverlay.qml  FlipCard.qml  FlipCardGrid.qml  LoadingOverlay.qml  NumberCard.qml  PageFooter.qml  SectionHeader.qml  TextOverlay.qml  WeekActivityDots.qml
automation/: CMakeLists.txt  uiautomationserver.cpp  uiautomationserver.h
dbtoolkit/: CMakeLists.txt  dbrepository.cpp  dbrepository.h  dbstorage.cpp  dbstorage.h  dbtoolkit.h  migrationrunner.cpp  migrationrunner.h  modelrepository.h
dbtoolkit/query/: CMakeLists.txt  alias.cpp  alias.h  altertable.cpp  altertable.h  column.cpp  column.h  createindex.cpp  createindex.h  createtable.cpp  createtable.h  delete.cpp  delete.h  insert.cpp  insert.h  join.cpp  join.h  order.cpp  order.h  pragma.cpp  pragma.h  select.cpp  select.h  sqlcommand.h  sqlquery.h  update.cpp  update.h  where.cpp  where.h
eventbus/: CMakeLists.txt  eventbase.cpp  eventbase.h  eventbus.cpp  eventbus.h
icons/: CMakeLists.txt
qmlcomponents/: BottomNavigation.qml  CMakeLists.txt  HtmlText.qml  TextCard.qml  ThemedBottomNavigation.qml  ThemedButton.qml  ThemedCard.qml  ThemedChat.qml  ThemedCheckBox.qml  ThemedComboBox.qml  ThemedDialog.qml  ThemedFileDialog.qml  ThemedFileSaveDialog.qml  ThemedHtmlText.qml  ThemedIcon.qml  ThemedInput.qml  ThemedPage.qml  ThemedProgressBar.qml  ThemedProgressBorder.qml  ThemedSpinBox.qml  ThemedSwitch.qml  ThemedTextArea.qml  ThemedTextCard.qml  ThemedToast.qml  filelistmodel.cpp  filelistmodel.h
tests/: CMakeLists.txt
tests/agent/: CMakeLists.txt  agenttest.cpp  clientintegrationtest.cpp  main.cpp  structurestest.cpp
tests/dbtoolkit/: CMakeLists.txt  createindex_test.cpp  dbrepository_test.cpp  dbrepository_uuid_test.cpp  pragma_test.cpp  query_test.cpp
utils/: CMakeLists.txt  backendworker.cpp  backendworker.h  coloredsvgprovider.cpp  coloredsvgprovider.h  databaseexporter.cpp  databaseexporter.h  expressionentry.h  fileopener.cpp  fileopener.h  filesaver.cpp  filesaver.h  fillincontent.cpp  fillincontent.h  fillintext.cpp  fillintext.h  fillintextbuilder.cpp  fillintextbuilder.h  keyboardinsetprovider.cpp  keyboardinsetprovider.h  mocktimeprovider.cpp  mocktimeprovider.h  qmlregistrator.cpp  qmlregistrator.h  result.h  safeareaprovider.cpp  safeareaprovider.h  securestorage.cpp  securestorage.h  service.h  stringtemplate.cpp  stringtemplate.h  task.h  testing.h  testsupport.h  textmatcher.cpp  textmatcher.h  timeprovider.cpp  timeprovider.h  urlhelper.cpp  (+3 more)
utils/android/: CMakeLists.txt  androidnotification.cpp  androidnotification.h  androidnotificationscheduler.cpp  androidnotificationscheduler.h  fileopenerandroid.cpp  fileopenerandroid.h  filesaverandroid.cpp  filesaverandroid.h  securestorageandroid.cpp  securestorageandroid.h
utils/android/jni/: CMakeLists.txt  alarmmanager.cpp  alarmmanager.h  context.cpp  context.h  intent.cpp  intent.h  notification.cpp  notification.h  notificationchannel.cpp  notificationchannel.h  notificationmanager.cpp  notificationmanager.h  pendingintent.cpp  pendingintent.h  resources.cpp  resources.h
utils/desktop/: CMakeLists.txt  fileopenerqt.cpp  fileopenerqt.h  filesaverqt.cpp  filesaverqt.h
utils/linux/: CMakeLists.txt  securestoragelinux.cpp  securestoragelinux.h
